--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,13 @@ server {
         proxy_read_timeout 120s;
         proxy_pass http://api:8000/;
     }
+
+    location ~ ^/(oauth|admin)/ {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_read_timeout 120s;
+        proxy_pass http://api:8000;
     }
 
     location / {
@@ -29,4 +36,3 @@ server {
     }
 
 }
-/etc/nginx/conf.d #
